# ESP32BoardManager

./: .gitignore  CMakeLists.txt  Kconfig  README.md
.github/workflows/: builder-41.yml
docs/: workflow.md
example/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
example/components/ExampleBoard/: CMakeLists.txt  ExampleBoard.cpp  ExampleBoard.h  ExampleBoardHTTPSrv.cpp  ExampleBoardHTTPSrv.h
example/html/: .gitignore  build.sh  package-lock.json  package.json
example/html/src/: board_info.js  config_page.js  configuration.js  firmware_page.js  home_page.js  index.html  logger.js  main.css  main.js  status_info.js  system_page.js
example/main/: CMakeLists.txt  main.cpp
src/: Board.cpp  Board.h  BoardEvents.h  BoardInfo.cpp  BoardInfo.h  Configuration.cpp  Configuration.h  Events.cpp  Events.h  WiFiConfig.cpp  WiFiConfig.h  WiFiManager.cpp  WiFiManager.h  pax_http_server.cpp  pax_http_server.h
